[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu/button_pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://menu/button_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://menu/Loading.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/bg.png" type="Texture" id=4]
[ext_resource path="res://menu/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://menu/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://menu/button_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://menu/button_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://menu/UI.gd" type="Script" id=14]
[ext_resource path="res://addons/anima/shapes/Rectangle.gd" type="Script" id=15]
[ext_resource path="res://menu/MenuItem.tscn" type="PackedScene" id=16]
[ext_resource path="res://menu/TPSDemoLabel.tscn" type="PackedScene" id=17]
[ext_resource path="res://addons/anima/core/player.gd" type="Script" id=18]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 13 )
Button/styles/disabled = null
Button/styles/focus = ExtResource( 2 )
Button/styles/hover = ExtResource( 7 )
Button/styles/normal = ExtResource( 9 )
Button/styles/pressed = ExtResource( 1 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 13 )
Label/styles/normal = null

[node name="UI" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_left = -0.000673103
anchor_top = -0.00189865
anchor_right = 0.999327
anchor_bottom = 0.998101
margin_left = -4.10107
margin_top = 2.05054
margin_right = -4.10107
margin_bottom = 2.05054
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBG" type="Control" parent="Main"]
anchor_left = 0.036
anchor_right = 0.113
anchor_bottom = 1.0
margin_right = 236.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
rect = Rect2( 0, 0, 100, 0 )
values_in = 1
color = Color( 0, 0, 0, 0.780392 )
is_filled = true

[node name="TPSDemoLabel" parent="Main/MenuBG" instance=ExtResource( 17 )]
anchor_right = 1.0
margin_right = 0.0

[node name="MenuItems" type="VBoxContainer" parent="Main/MenuBG"]
margin_top = 4.0
margin_right = 383.0
margin_bottom = 1079.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Main/MenuBG/MenuItems" instance=ExtResource( 16 )]
margin_top = 417.0
margin_right = 383.0
margin_bottom = 497.0
rect_min_size = Vector2( 0, 80 )
label = "PLAY"

[node name="SettingsButton" parent="Main/MenuBG/MenuItems" instance=ExtResource( 16 )]
margin_top = 497.0
margin_right = 383.0
margin_bottom = 577.0
rect_min_size = Vector2( 0, 80 )
label = "SETTINGS"

[node name="QuitButton" parent="Main/MenuBG/MenuItems" instance=ExtResource( 16 )]
margin_top = 577.0
margin_right = 383.0
margin_bottom = 657.0
rect_min_size = Vector2( 0, 80 )
label = "QUIT"

[node name="GameSettings" parent="." instance=ExtResource( 8 )]

[node name="AnimaPlayer" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Loading" parent="." instance=ExtResource( 3 )]

[connection signal="clicked" from="Main/MenuBG/MenuItems/PlayButton" to="." method="_on_Play_clicked"]
[connection signal="clicked" from="Main/MenuBG/MenuItems/SettingsButton" to="." method="_on_Settings_clicked"]
[connection signal="clicked" from="Main/MenuBG/MenuItems/QuitButton" to="." method="_on_Quit_clicked"]
[connection signal="loading_animation_completed" from="Loading" to="." method="_on_Loading_loading_animation_completed"]
